--- a/Portfolio/assets/css/main.css
+++ b/Portfolio/assets/css/main.css
@@ -1139,10 +1139,13 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-image: url(../../images/Valley-16.7s-2048px.svg);
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
@@ -1155,7 +1158,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bg.jpg");
+			background-image: url(../../images/Valley-16.7s-2048px.svg);
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -1174,7 +1177,7 @@ input, select, textarea {
 		}
 
 		body.is-preload #bg:before {
-			background-color: #000000;
+			background-color: #4daaa8;
 		}
 
 /* Wrapper */
@@ -1251,10 +1254,10 @@ input, select, textarea {
 		-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		background-image: -moz-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		background-image: -webkit-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		background-image: -ms-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		background-image: radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
+		background-image: -moz-radial-gradient(rgba(9, 163, 235, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: -webkit-radial-gradient(rgba(9, 163, 235, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: -ms-radial-gradient(rgba(9, 163, 235, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: radial-gradient(rgba(9, 163, 235, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
 		max-width: 100%;
 		text-align: center;
 	}
@@ -1543,10 +1546,33 @@ input, select, textarea {
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
-			background-color: rgba(27, 31, 34, 0.85);
+			background-color: rgba(11, 62, 92, 0.85);
 			border-radius: 4px;
 			opacity: 0;
 		}
+
+			#main #services button a {
+				text-decoration: none;
+				border-bottom: none;
+			}
+
+			#main .buttonHolder {
+				display: flex;
+				justify-content: center;
+			}
+
+			#main  #work .workContainer{
+				display: flex;
+				justify-content: center;
+				flex-wrap: wrap;
+			}
+
+			#main #work .workContainer div, .workContainer img {
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: center;
+				width: 75%;
+			}
 
 			#main article.active {
 				-moz-transform: translateY(0);
