--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1106,6 +1106,9 @@ input, select, textarea {
 
 /* BG */
 
+
+
+
 	#bg {
 		-moz-transform: scale(1.0);
 		-webkit-transform: scale(1.0);
@@ -1115,10 +1118,59 @@ input, select, textarea {
 		position: fixed;
 		top: 0;
 		left: 0;
-		width: 100%;
+		width: 100vw;
 		height: 100vh;
 		z-index: 1;
 	}
+
+	@media screen and (max-width:980px){
+		#bg {
+			-moz-transform: scale(1.0);
+			-webkit-transform: scale(1.0);
+			-ms-transform: scale(1.0);
+			transform: scale(1.0);
+			-webkit-backface-visibility: hidden;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100vw;
+			height: 100vh;
+			z-index: 1;
+		}
+	}
+	
+	@media screen and (max-width: 736px) {
+		#bg {
+			-moz-transform: scale(1.0);
+			-webkit-transform: scale(1.0);
+			-ms-transform: scale(1.0);
+			transform: scale(1.0);
+			-webkit-backface-visibility: hidden;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100vw;
+			height: 100vh;
+			z-index: 1;
+		}
+	}
+
+	@media screen and (max-width: 480px) {
+		#bg {
+			-moz-transform: scale(1.0);
+			-webkit-transform: scale(1.0);
+			-ms-transform: scale(1.0);
+			transform: scale(1.0);
+			-webkit-backface-visibility: hidden;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100vh;
+			z-index: 1;
+		}
+	}
+
 
 		#bg:before, #bg:after {
 			content: '';
@@ -1139,7 +1191,7 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background-image: url(../../images/Valley-16.7s-2048px.svg);
+			background-image: url(../js/main.js);
 			background-size: auto,
  256px 256px;
 			background-position: center,
@@ -1158,7 +1210,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url(../../images/Valley-16.7s-2048px.svg);
+			background-image: url();
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -1177,7 +1229,7 @@ input, select, textarea {
 		}
 
 		body.is-preload #bg:before {
-			background-color: #4daaa8;
+			background-color: #000000;
 		}
 
 /* Wrapper */
@@ -1254,10 +1306,10 @@ input, select, textarea {
 		-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		background-image: -moz-radial-gradient(rgba(9, 163, 235, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
-		background-image: -webkit-radial-gradient(rgba(9, 163, 235, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
-		background-image: -ms-radial-gradient(rgba(9, 163, 235, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
-		background-image: radial-gradient(rgba(9, 163, 235, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: -moz-radial-gradient(rgba(0, 0, 0, 0.50) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: -webkit-radial-gradient(rgba(0, 0, 0, 0.50) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: -ms-radial-gradient(rgba(0, 0, 0, 0.50) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: radial-gradient(rgba(0, 0, 0, 0.50) 25%, rgba(25, 220, 216, 0) 55%);
 		max-width: 100%;
 		text-align: center;
 	}
