--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,6 +155,7 @@ input, select, textarea {
 		border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
 		text-decoration: none;
 		color: inherit;
+		border-bottom-color: transparent;
 	}
 
 		a:hover {
@@ -576,6 +577,12 @@ input, select, textarea {
 		color: rgba(255, 255, 255, 0.5) !important;
 		opacity: 1.0;
 	}
+
+/* links */
+
+a, a:hover, a:active{
+	text-decoration: none !important;
+}
 
 /* Box */
 
@@ -1250,7 +1257,7 @@ input, select, textarea {
 		-moz-justify-content: space-between;
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
-		justify-content: space-between;
+		justify-content: center;
 		position: relative;
 		min-height: 100vh;
 		width: 100%;
@@ -1267,6 +1274,7 @@ input, select, textarea {
 
 			#wrapper {
 				padding: 3rem 2rem;
+				
 			}
 
 		}
@@ -1275,6 +1283,8 @@ input, select, textarea {
 
 			#wrapper {
 				padding: 2rem 1rem;
+				align-items: center;
+				justify-content: center;
 			}
 
 		}
@@ -1285,6 +1295,22 @@ input, select, textarea {
 				padding: 1rem;
 			}
 
+		}
+		/* Purpose is to ensure landing page pushes new projects outside of first impression view */
+		.landingFullPageMaker {
+			display: flex;
+			flex-flow: column;
+			justify-content: center;
+			height: 80vh;
+			width: 100vw;
+			padding: 0 2rem 0 2rem; 
+			/* added padding so that lines on header are responsive */
+		}
+
+		@media screen and (max-width: 736px) {
+			.landingFullPageMaker {
+				height: 85vh;	
+		}
 		}
 
 /* Header */
@@ -1306,10 +1332,10 @@ input, select, textarea {
 		-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		background-image: -moz-radial-gradient(rgba(0, 0, 0, 0.50) 25%, rgba(25, 220, 216, 0) 55%);
-		background-image: -webkit-radial-gradient(rgba(0, 0, 0, 0.50) 25%, rgba(25, 220, 216, 0) 55%);
-		background-image: -ms-radial-gradient(rgba(0, 0, 0, 0.50) 25%, rgba(25, 220, 216, 0) 55%);
-		background-image: radial-gradient(rgba(0, 0, 0, 0.50) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: -moz-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: -webkit-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: -ms-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
+		background-image: radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(25, 220, 216, 0) 55%);
 		max-width: 100%;
 		text-align: center;
 	}
@@ -1434,7 +1460,7 @@ input, select, textarea {
 			border-left: 0;
 		}
 
-		body.is-article-visible #header {
+		body.is-article-visible #header,  body.is-article-visible #recentProjects  {
 			-moz-transform: scale(0.95);
 			-webkit-transform: scale(0.95);
 			-ms-transform: scale(0.95);
@@ -1446,18 +1472,18 @@ input, select, textarea {
 			opacity: 0;
 		}
 
-		body.is-preload #header {
+		body.is-preload #header , body.is-preload #recentProjects  {
 			-moz-filter: blur(0.125rem);
 			-webkit-filter: blur(0.125rem);
 			-ms-filter: blur(0.125rem);
 			filter: blur(0.125rem);
 		}
 
-			body.is-preload #header > * {
+			body.is-preload #header > * ,  body.is-preload #recentProjects> *  {
 				opacity: 0;
 			}
 
-			body.is-preload #header .content .inner {
+			body.is-preload #header .content .inner, body.is-preload #recentProjects {
 				max-height: 0;
 				padding-top: 0;
 				padding-bottom: 0;
@@ -1543,6 +1569,68 @@ input, select, textarea {
 				}
 
 		}
+
+
+/* Works Preview section */
+
+
+		#recentProjects{
+			margin-top: 50px;
+			display: flex;
+			flex-direction: column;
+			width: 100%;
+			height:fit-content;
+		}
+
+		
+		#recentProjects h2{
+			border-bottom: 1px solid white !important; 
+			padding-bottom: 10px ;
+			width: 15em;
+			-moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
+			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
+			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
+			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
+		}
+
+		#recentProjects .projectImages {
+			display: flex;
+			justify-content: space-between;
+		}
+
+		.projectImages a {
+			width: 45%;
+		}
+
+		.projectImages img {
+			width: 100%;
+		}
+
+		.projectImages img:hover {
+			scale: 1.2 2s;
+		}
+
+
+		@media screen and (max-width: 736px) {
+			
+			.projectImages {
+				flex-direction: column;
+				justify-content: center;
+				align-content: center;
+				flex-wrap: wrap;
+			}
+
+			.projectImages a{
+				width: 100%;
+				flex-direction: column;
+				justify-content: center;
+				flex-wrap: wrap;
+				margin-top: 2em;
+			}
+
+
+		}
+
 
 /* Main */
 
