--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1667,6 +1667,8 @@ a, a:hover, a:active{
 		z-index: 3;
 	}
 
+	
+
 		#main article {
 			-moz-transform: translateY(0.25rem);
 			-webkit-transform: translateY(0.25rem);
@@ -1692,8 +1694,24 @@ a, a:hover, a:active{
 
 			#main .buttonHolder {
 				display: flex;
-				justify-content: center;
+				justify-content: space-between;
+				border-top: solid 1px rgba(255, 255, 255, .5);
+				padding-top: 20px;
 			}
+
+				#main .buttonHolder a {
+					border: 1px solid white;
+					padding: 2.5px 5px;
+					border-radius: 7.5px;
+				}
+
+				#main .buttonHolder a:hover {
+					background-color: rgba(255, 255, 255, 0.075);
+				}
+
+				#main .buttonHolder a:hover  {
+					background-color: rgba(255, 255, 255, 0.175);
+				}
 
 			#main  #work .workContainer{
 				display: flex;
