--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1721,6 +1721,13 @@ a, a:hover, a:active{
 					background-color: rgba(255, 255, 255, 0.175);
 				}
 
+			#main #work {
+				justify-content: top center;
+    			margin-top: 40%;
+    			display: flex;
+    			flex-direction: column;
+			}
+
 			#main  #work .workContainer{
 				display: flex;
 				justify-content: center;
