text align center for div containing recent projects
#main #work .workContainer div, .workContainer img, .workContainer a {

}

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1741,6 +1741,7 @@ a, a:hover, a:active{
 				justify-content: center;
 				width: 90%;
 				border-bottom: none;
+				text-align: center;
 			}
 
 			#main article.active {
